implement nagios ssh checks for cpu, memory, rootfs_rw and network usage

--- a/lib/cloudstack-nagios/files/snmpd.conf
+++ b/lib/cloudstack-nagios/files/snmpd.conf
@@ -23,6 +23,7 @@
 #  then remember to update the other occurances in this example config file to match.
 
 
+agentaddress udp:161,udp6:161,tcp:161,tcp6:161
 
 ###############################################################################
 #
