--- a/lib/cloudstack-nagios/files/snmpd.conf
+++ b/lib/cloudstack-nagios/files/snmpd.conf
@@ -1,5 +1,5 @@
 ###############################################################################
-#
+# file not used
 # EXAMPLE.conf:
 #   An example configuration file for configuring the Net-SNMP agent ('snmpd')
 #   See the 'snmpd.conf(5)' man page for details
